[tool.poetry]
name = "py-aiger-jani"
version = "0.1.0"
description = "Python library for translating from a subset of Jani to AIGs."
repository = "https://github.com/mvcisback/py-aiger-jani"
authors = ["Marcell Vazquez-Chanlatte <mvc@linux.com>"]
readme="README.md"
license = "MIT"
packages = [
    { include = "aiger_jani" },
]

[tool.poetry.dependencies]
python = "^3.8"
py-aiger = "^6.1.14"
py-aiger-coins = "^3.3.0"
py-aiger-bv = "^4.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
