[tool.poetry]
name = "py-aiger-jani"
version = "0.1.0"
description = "Python library for translating from a subset of Jani to AIGs."
repository = "https://github.com/mvcisback/py-aiger-jani"
authors = ["Marcell Vazquez-Chanlatte <mvc@linux.com>"]
readme="README.md"
license = "MIT"
packages = [
    { include = "aiger_jani" },
]

[tool.poetry.dependencies]
python = "^3.8"
py-aiger = "^6.1.14"
py-aiger-coins = "^3.3.0"
py-aiger-bv = "^4.5.3"
numpy = "^1.20.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-flake8 = "^1.0.7"
coverage = "^5.5"
codecov = "^2.1.11"
pdoc3 = "^0.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
